Card added and fixed alignment issues in explore our portfolios section

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -14324,15 +14324,6 @@ header {
     border-radius: 8px;
 }
 
-.card {
-    border-bottom: 1px solid #E5E9F2;
-    padding: 5px;
-}
-
-.card .card-header h2 button {
-    color: #000;
-    font-size: 16px;
-}
 
 .shadow-box {
     box-shadow: 1px 6px 8px -5px rgb(0 0 0 / 15%);
@@ -15305,3 +15296,25 @@ ul {
 .navbar {
     float: right;
 }
+
+
+/* Homepage Starts */
+.card {
+    border-bottom: 1px solid #E5E9F2;
+    padding: 5px;
+    width: 80%;
+    margin-left: 10%;
+    margin-top:-30px;
+    border-radius: 15px !important;
+}
+
+.card .card-header h2 button {
+    color: #000;
+    font-size: 16px;
+}
+.card h3{
+    font-size: 12px !important;
+}
+
+
+/* Homepage Ends*/
